1. add data source events 2. refactor threshold checker